// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button Text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots Connections Connection Card 1`] = `
<div
  className="social-box"
  onClick={[Function]}
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="text-center col-12"
      >
        <div
          className="box"
        >
          <i
            aria-hidden="true"
            className="fa fa-train fa-3x"
          />
          <div
            className="box-title"
          >
            <h3>
              Duration: 
              03:58
            </h3>
          </div>
          <div
            className="box-text"
          >
            <span>
              Transfers: 
              4
            </span>
            <span>
              Sections: 
              5
            </span>
            <span
              className="tripData"
            >
              03/09/2020 10:13
               - 
              03/09/2020 14:11
            </span>
          </div>
          <div
            className="box-btn"
          >
            <p>
              See Trip Details
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table Header Basic example 1`] = `
<div
  className="social-box"
  onClick={[Function]}
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="text-center col-12"
      >
        <div
          className="box"
        >
          <i
            aria-hidden="true"
            className="fa fa-train fa-3x"
          />
          <div
            className="box-title"
          >
            <h3>
              Duration: 
              03:58
            </h3>
          </div>
          <div
            className="box-text"
          >
            <span>
              Transfers: 
              4
            </span>
            <span>
              Sections: 
              5
            </span>
            <span
              className="tripData"
            >
              03/09/2020 10:13
               - 
              03/09/2020 14:11
            </span>
          </div>
          <div
            className="box-btn"
          >
            <p>
              See Trip Details
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table Header Connection Card 1`] = `
<div
  className="social-box"
  onClick={[Function]}
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="text-center col-12"
      >
        <div
          className="box"
        >
          <i
            aria-hidden="true"
            className="fa fa-train fa-3x"
          />
          <div
            className="box-title"
          >
            <h3>
              Duration: 
              03:58
            </h3>
          </div>
          <div
            className="box-text"
          >
            <span>
              Transfers: 
              4
            </span>
            <span>
              Sections: 
              5
            </span>
            <span
              className="tripData"
            >
              03/09/2020 10:13
               - 
              03/09/2020 14:11
            </span>
          </div>
          <div
            className="box-btn"
          >
            <p>
              See Trip Details
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
